--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <p>Please fill out this form with the required information</p>
     <form action='https://register-demo.freecodecamp.org'>
       <fieldset>
-            <label for="first-name">Enter Your First Name: 
-                <input id="first-name" type="text" required />
-            </label>
-            <label for="last-name">Enter Your Last Name: 
-                <input id="last-name" type="text" required />
-            </label>
-            <label for="email">Enter Your Email: 
-                <input id="email" type="email" required />
-            </label>
-            <label for="new-password">Create a New Password: 
-                <input id="new-password" type="password" pattern="[a-z0-5]{8,}" required />
-            </label>
+          <label for="first-name">Enter Your First Name: 
+              <input id="first-name" type="text" required />
+          </label>
+          <label for="last-name">Enter Your Last Name: 
+              <input id="last-name" type="text" required />
+          </label>
+          <label for="email">Enter Your Email: 
+              <input id="email" type="email" required />
+          </label>
+          <label for="new-password">Create a New Password: 
+              <input id="new-password" type="password" pattern="[a-z0-5]{8,}" required />
+          </label>
       </fieldset>
       <fieldset>
         <label>
-            <input type="radio" /> Personal Account
+            <input type="radio" name="account-type"/> Personal Account
         </label>
         <label>
-            <input type="radio" /> Business Account
+            <input type="radio" name="account-type"/> Business Account
         </label>
         <label>
             <input type="checkbox" required /> I accept the terms and conditions
