--- a/index.html
+++ b/index.html
@@ -6,38 +6,63 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Registration Form</h1>
-    <p>Please fill out this form with the required information</p>
+    <div class="header">
+      <h1>Registration Form</h1>
+      <p>Please fill out this form with the required information</p>
+    </div>
     <form action='https://register-demo.freecodecamp.org'>
-      <fieldset>
-          <label for="first-name">Enter Your First Name: 
-              <input id="first-name" type="text" required />
-          </label>
-          <label for="last-name">Enter Your Last Name: 
-              <input id="last-name" type="text" required />
-          </label>
-          <label for="email">Enter Your Email: 
-              <input id="email" type="email" required />
-          </label>
-          <label for="new-password">Create a New Password: 
-              <input id="new-password" type="password" pattern="[a-z0-5]{8,}" required />
-          </label>
-      </fieldset>
-      <fieldset>
-        <label>
-            <input type="radio" name="account-type"/> Personal Account
-        </label>
-        <label>
-            <input type="radio" name="account-type"/> Business Account
-        </label>
-        <label>
-            <input type="checkbox" required /> I accept the terms and conditions
-        </label>
-      </fieldset>
-      <fieldset>
-        
-      </fieldset>
-      <input type="submit" value="Submit" />
+        <fieldset class="first">
+            <label for="first-name">Enter Your First Name: 
+                <input id="first-name" type="text" name="first-name" required />
+            </label>
+            <label for="last-name">Enter Your Last Name: 
+                <input id="last-name" type="text" name="last-name" required />
+            </label>
+            <label for="email">Enter Your Email: 
+                <input id="email" type="email" name="email" required />
+            </label>
+            <label for="new-password">Create a New Password: 
+                <input id="new-password" type="password" name="new-password" pattern="[a-z0-5]{8,}" required />
+            </label>
+        </fieldset>
+
+        <fieldset class="second">
+            <label for="personal-account"> <!-- for = id -->
+                <input type="radio" name="account-type" id="personal-account"/> Personal Account
+            </label>
+            <label for="business-account">
+                <input type="radio" name="account-type" id="business-account"/> Business Account
+            </label>
+            <label for="terms-and-conditions">
+                <input type="checkbox" id="terms-and-conditions" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/" target="_blank" id="term-anchor">&nbspterms and conditions </a>
+            </label>
+        </fieldset>
+
+        <fieldset class="third">
+            <label for="profile-picture">Upload a profile picture:
+                <input type="file" id="profile-picture">
+            </label>
+
+            <label for="age">Input your age (years):
+                <input type="number" name="" id="age" min="13" max="120">
+            </label>
+
+            <label for="referrer">How did you hear about us? 
+                <select name="" id="referrer">
+                  <option value="">(select one)</option>
+                  <option value="1">freeCodeCamp News</option>
+                  <option value="2">freeCodeCamp YouTube Channel</option>
+                  <option value="3">freeCodeCamp Forum</option>
+                  <option value="4">Other</option>
+                </select>
+            </label>
+            <label for="bio">Provide a bio:
+              <textarea name="" id="bio" cols="30" rows="3" placeholder="I like coding on the beach..."></textarea>
+            </label>
+        </fieldset>
+        <input type="submit" value="Submit" />
     </form>
+
+
   </body>
 </html>
